--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button class="navbar-toggler" type="button"data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand mr-auto" href="#"><a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>/a>
+            <a class="navbar-brand mr-auto" href="#"><a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
                 <div class="collapse navbar-collapse"id="Navbar">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home </a></li>
@@ -34,15 +34,21 @@
     </nav>
     <header>
         <div class="jumbotron">
-            <div class="row row-header" >
-                <div class="col-12 col-sm-6 ">
-                    <h1>Ristorante con Fusion</h1>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
-                </div>
-                <div class="col-12 col-sm align-self-center">
-                    <img src="img/logo.png" class="img-fluid">
+            <div class="container">
+                <div class="row row-header" >
+                    <div class="col-12 col-sm-6 align-self-center">
+                        <h1>Ristorante con Fusion</h1>
+                        <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                    </div>
+                    <div class="col-12 col-sm align-self-center">
+                        <img src="img/logo.png" class="img-fluid">
+                    </div>
+                    <div class="col-12 col-sm align-self-center">
+                        <button type="button" class="btn btn-warning" ><a href="#bottom">Reserve a Table</a></button>
+                    </div>
                 </div>
             </div>
+            
         </div>
     </header>
     <div class="container">
@@ -70,12 +76,21 @@
 
 
         <div class="row row-content align-item-center">
-            <div class="col-12 col-sm-5 order-sm-last col-md-4">
-                <h3>This Month's Promotions</h3>
+            <div class="col-12 col-sm-5 order-sm-first col-md-4">
+                <h3>This Month's<br> Promotions</h3>
             </div>
-            <div class="col-12 col-sm order-sm-first col-md">
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="media col-sm-7">
+                <div class="media-body">
+                    <h2 class="mt-0">Uthappizza
+                        <span class="badge badge-danger">NEW</span>
+                    </h2>
+                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                        Italian pizza, topped with Cerignola olives, ripe vine
+                        cherry tomatoes, Vidalia onion, Guntur chillies and
+                        Buffalo Paneer.</p>
+                </div>
+                <img class="d-flex mr-3 img-thumbnail align-self-center"
+                        src="img/buffet.png" alt="buffet">
             </div>
         </div>
 
@@ -99,8 +114,56 @@
                 </div>
             </div>
         </div>
+        <div class="card p" id="bottom" >
+            <h3 class="card-header text-black back" >RESERVE A TABLE</h3>
+            <div class="card-body">
+                <form >
+                    <div class="form-group row p" >
+                        <label for="number of guests" class="col-md-2 col-form-label">Number<br> of Guests</label>
+                            <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                            <label class="form-check-label" for="inlineRadio1">1</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                            <label class="form-check-label" for="inlineRadio2">2</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                            <label class="form-check-label" for="inlineRadio3">3</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                            <label class="form-check-label" for="inlineRadio1">4</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                            <label class="form-check-label" for="inlineRadio2">5</label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                            <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                            <label class="form-check-label" for="inlineRadio3">6</label>
+                        </div>
+                    </div>
+                    <div class="form-group row p">
+                        <label for="dat&time" class="col-12 col-md-2 col-form-label ">Date and<br> Time</label>
+                        <div class="col-5 col-md-3">
+                            <input type="date" class="form-control" id="date" name="date" placeholder="Date">
+                        </div>
+                        <div class="col-7 col-md-7">
+                            <input type="time" class="form-control" id="time" name="time" placeholder="Time">
+                        </div>
+                    </div>
+                    <div class="form-group row p">
+                        <div class="offset-md-2 col-md-10">
+                            <button type="submit" class="btn btn-primary">Reserve</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
     </div>
-
+    
     <footer class="footer">
         <div class="container">
             <div class="row ">             
