--- a/contactus.html
+++ b/contactus.html
@@ -70,10 +70,9 @@
 		              121, Clear Water Bay Road<br>
 		              Clear Water Bay, Kowloon<br>
 		              HONG KONG<br>
-		              <i class="fa fa-phone"></i>: +852 1234 5678<br>
-		              <i class="fa fa-fax"></i>: +852 8765 4321<br>
+		              <i class="fa fa-phone"></i>: +918624891545<br>
 		              <i class="fa fa-envelope"></i>:
-                        <a href="mailto:confusion@food.net">confusion@food.net</a>
+                        <a href="karankangude17@gmail.com">karankangude17@gmail.com</a>
 		           </address>
             </div>
             <div class="col-12 col-sm-6 offset-sm-1">
@@ -83,7 +82,7 @@
                 <div class="btn-group" role="group">
                     <a role="button" class="btn btn-primary" href="tel:+918624891545"><i class="fa fa-phone"></i> Call</a>
                     <a role="button" class="btn btn-info"><i class="fa fa-skype"></i> Skype</a>
-                    <a role="button" class="btn btn-success" href="mailto:confusion@food.net"><i class="fa fa-envelope-o"></i> Email</a>
+                    <a role="button" class="btn btn-success" href="karankangude17@gmail.com"><i class="fa fa-envelope-o"></i> Email</a>
                 </div>
             </div>
         </div>
