--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles-old.css">
     <title>Ristorante Con Fusion</title>
 </head>
 
@@ -36,15 +36,15 @@
                 </div>           
         </div>
     </nav>
-    <div id="loginModal" class="modal fade" role="dialog">
+    <div id="loginModal" class="modal fade " role="dialog">
         <div class="modal-dialog modal-lg" role="content">
             <!-- Modal content-->
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h4 class="modal-title">Login </h4>
+            <div class="modal-content ">
+                <div class="modal-header mm">
+                    <h4 class="modal-title ll">Login </h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body login ">
                     <form>
                         <div class="form-row">
                             <div class="form-group col-sm-4">
@@ -80,7 +80,7 @@
                     <h4 class="modal-title ">RESERVE A TABLE </h4>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <div class="modal-body">
+                <div class="modal-body csv">
                     <form >
                         <div class="form-group row p" >
                             <label for="number of guests" class="col-md-2 col-form-label">Number<br> of Guests</label>
